--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-Easy Satellite API in order to do some analytics or work with satellite data
+Easy Satellite API in order to do some analytics or work with satellite data. Get beautiful images for a location and date.
+
+In order to work with the API, you need an API key. Please sign up (https://orbital-views.appspot.com) 
+and check your key in your Profile. The API Key is part of your calls and identifies you.
+ 
+HowTo:
+
+1. Please register a field with a polygon and date. It takes some minutes to process the timeseries data. All other API calls ared based on your registered area.
+   A polygon can be generated with http://geojson.io/. Please mark an area of interest and save the polygon as 'WKT'. An example for a WKT string is shown in durnast.wkt.
+   
