--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Easy Satellite API in order to do some analytics or work with satellite data. Get beautiful images for a location and date.
 
-![alt text](https://github.com/michl-in-pan/orbitalviews/img/California.mp4)
+![alt text](https://github.com/michl-in-pan/orbitalviews/img/rgb.png)
 
 In order to work with the API, you need an API key. Please sign up (https://orbital-views.appspot.com) 
 and check your key in your Profile. The API Key is part of your calls and identifies you.
